[package]
name = "sjakk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pykulytsky/sjakk"
keywords = ["chess", "movegen"]
description = "Chess movegen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.25.0"
strum_macros = "0.25.1"
