[package]
name = "sjakk"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pykulytsky/sjakk"
keywords = ["chess", "movegen"]
description = "Chess movegen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "board"
harness = false

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "pseudo_legal"
harness = false

[profile.release]
opt-level = 3
debug = false

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
futures = { version = "0.3.28", features = ["thread-pool"] }
rand = "0.8.5"
smallvec = "1.11.0"
thiserror = "1.0.44"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
